--- a/brocode.html
+++ b/brocode.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>studysync</title>
+    <title>BroCode</title>
     <link rel="icon" type="image/x-icon" href="bat.jpeg" />
     <link rel="stylesheet" href="brostyle.css" />
   </head>
