--- a/brocode.html
+++ b/brocode.html
@@ -138,5 +138,52 @@
         </div>
       </div>
     </div>
+
+    <div class="testimonial">
+      <div class="test_head">
+        <h2>What Other Says About Us</h2>
+      </div>
+      <div class="test_card">
+        <div class="test_item">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vero
+            eum voluptatem laudantium eos eligendi aut voluptate, magnam
+            <strong>voluptas assumenda autem esse nobis quasi deserunt ut ullam
+            architecto.</strong>
+          </p>
+          <div class="test_img"><img src="pfp.png" alt="" /></div>
+          <div class="name">
+            <span id="name">Ankit panchal</span>
+            <span id="desigg">SDE level 3</span>
+          </div>
+        </div>
+        <div class="test_item">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vero
+            eum voluptatem laudantium eos eligendi aut voluptate, magnam
+            <strong>voluptas assumenda autem esse nobis quasi deserunt ut ullam
+            architecto.</strong>
+          </p>
+          <div class="test_img"><img src="pfp.png" alt="" /></div>
+          <div class="name">
+            <span id="name">Ansh chaudhary</span>
+            <span  id="desigg">Senoir devops</span>
+          </div>
+        </div>
+        <div class="test_item">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vero
+            eum voluptatem laudantium eos eligendi aut voluptate, magnam
+            <strong>voluptas assumenda autem esse nobis quasi deserunt ut ullam
+            architecto.</strong>
+          </p>
+          <div class="test_img"><img src="pfp.png" alt="" /></div>
+          <div class="name">
+            <span id="name">BJ ganesh</span>
+            <span  id="desigg">Cybercell head</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
