--- a/brocode.html
+++ b/brocode.html
@@ -148,8 +148,10 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vero
             eum voluptatem laudantium eos eligendi aut voluptate, magnam
-            <strong>voluptas assumenda autem esse nobis quasi deserunt ut ullam
-            architecto.</strong>
+            <strong
+              >voluptas assumenda autem esse nobis quasi deserunt ut ullam
+              architecto.</strong
+            >
           </p>
           <div class="test_img"><img src="pfp.png" alt="" /></div>
           <div class="name">
@@ -161,27 +163,103 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vero
             eum voluptatem laudantium eos eligendi aut voluptate, magnam
-            <strong>voluptas assumenda autem esse nobis quasi deserunt ut ullam
-            architecto.</strong>
+            <strong
+              >voluptas assumenda autem esse nobis quasi deserunt ut ullam
+              architecto.</strong
+            >
           </p>
           <div class="test_img"><img src="pfp.png" alt="" /></div>
           <div class="name">
             <span id="name">Ansh chaudhary</span>
-            <span  id="desigg">Senoir devops</span>
+            <span id="desigg">Senoir devops</span>
           </div>
         </div>
         <div class="test_item">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vero
             eum voluptatem laudantium eos eligendi aut voluptate, magnam
-            <strong>voluptas assumenda autem esse nobis quasi deserunt ut ullam
-            architecto.</strong>
+            <strong
+              >voluptas assumenda autem esse nobis quasi deserunt ut ullam
+              architecto.</strong
+            >
           </p>
           <div class="test_img"><img src="pfp.png" alt="" /></div>
           <div class="name">
             <span id="name">BJ ganesh</span>
-            <span  id="desigg">Cybercell head</span>
+            <span id="desigg">Cybercell head</span>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="updates">
+      <div class="right_update">
+        <img src="pexels-fabianwiktor-994605.jpg" alt="" />
+        <div class="rg_para"><p>JOIN US FAST!!!!</p></div>
+      </div>
+      <div class="left_update">
+        <h2>Get the latest updates</h2>
+        <p class="fp_email">Sign up for latest updates</p>
+        <div class="email">
+          <input type="email" placeholder="Email" class="email_input" />
+          <button class="email_button">send</button>
+        </div>
+        <p class="sp_email">
+          Before signing you should read our
+          <a href="#terms">Terms and conditions</a>
+          and <a href="#policy">policies</a>
+        </p>
+      </div>
+    </div>
+
+    <div class="foot_sec">
+      <div class="foot_left">
+        <div class="logo">
+          <img src="pen.png" alt=" " />
+          <a href="brocode.htm"><h2>BroCode</h2></a>
+        </div>
+        <p>Prepare yourself for future.....</p>
+        <div class="foot_img">
+          <img src="insta.png" alt="" />
+          <img src="tt.png" alt="" />
+          <img src="li.png" alt="" />
+        </div>
+      </div>
+      <div class="foot_right">
+        <div class="aboutus">
+          <h3>Products</h3>
+          <ul>
+            <li><a href="#">Overview</a></li>
+            <li><a href="#">Solution</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Customers</a></li>
+          </ul>
+        </div>
+        <div class="aboutus">
+          <h3>Company</h3>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+        <div class="aboutus">
+          <h3>Support</h3>
+          <ul>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">Chat</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+        <div class="aboutus">
+          <h3>Legal</h3>
+          <ul>
+            <li><a href="#">Terms of service</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Cookie settings</a></li>
+          </ul>
         </div>
       </div>
     </div>
