--- a/brocode.html
+++ b/brocode.html
@@ -12,7 +12,7 @@
       <header>
         <div class="icon">
           <div class="icon_img"><img src="pen.png" alt="" id="img1" /></div>
-          <span><a href="brocode.htm">BroCode</a></span>
+          <span><a href="brocode.html">BroCode</a></span>
         </div>
 
         <div class="nav">
