--- a/brocode.html
+++ b/brocode.html
@@ -58,7 +58,7 @@
         <div class="gg"><img src="gg.png" alt="" /><span>Google</span></div>
         <div class="ms"><img src="ms.png" alt="" /><span>Microsoft</span></div>
         <div class="li"><img src="li.png" alt="" /><span>LinkedIn</span></div>
-        <div class="VE"><img src="ve.png" alt="" /><span>VectorEdu</span></div>
+        <div class="ve"><img src="ve.png" alt="" /><span>VectorEdu</span></div>
       </div>
     </div>
 
@@ -216,7 +216,7 @@
       <div class="foot_left">
         <div class="logo">
           <img src="pen.png" alt=" " />
-          <a href="brocode.htm"><h2>BroCode</h2></a>
+          <a href="brocode.html"><h2>BroCode</h2></a>
         </div>
         <p>Prepare yourself for future.....</p>
         <div class="foot_img">
