--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
         <div class="icon">
           <div class="icon_img"><img src="pen.png" alt="" id="img1" /></div>
-          <span><a href="brocode.html">BroCode</a></span>
+          <span><a href="index.html">BroCode</a></span>
         </div>
 
         <div class="nav">
@@ -216,7 +216,7 @@
       <div class="foot_left">
         <div class="logo">
           <img src="pen.png" alt=" " />
-          <a href="brocode.html"><h2>BroCode</h2></a>
+          <a href="index.html"><h2>BroCode</h2></a>
         </div>
         <p>Prepare yourself for future.....</p>
         <div class="foot_img">
